--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
+    "ethers": "^5.7.2",
     "firebase": "^9.12.0",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
