--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "firebase": "^9.12.0",
     "postcss": "^8.4.19",
